# Ground_Mischung

./: .gitignore  README.md
Ground Hardware/: Cargo.toml  flash.sh  llm.txt
Ground Hardware/.cargo/: config.toml
Ground Hardware/src/: crsf.rs  display.rs  main.rs  main_minimal.rs  menu.rs  serial.rs
Ground app/: app.js  index.html  launch.sh  package-lock.json  package.json  server.js  styles.css
